--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^6.1.0
   provider: ^6.0.5
   intl: ^0.17.0
+  cloud_functions:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
