--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   firebase_core: ^2.10.0
 
   cloud_firestore: ^4.5.3
-
   firebase_auth: ^4.4.2
   google_sign_in: ^6.1.0
   provider: ^6.0.5
   intl: ^0.17.0
   cloud_functions:
+  fl_chart: ^0.62.0
+  table_calendar:
+  syncfusion_flutter_charts:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
