--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fl_chart: ^0.62.0
   table_calendar:
   syncfusion_flutter_charts:
+  quickalert:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
